--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -3,7 +3,7 @@
 # See https://docs.readthedocs.io/en/stable/config-file/v2.html for details
 version: 2
 sphinx:
-  configuration: doc/source/conf.py
+  configuration: docs/source/conf.py
 python:
   version: 3.6
   install:
